# TRY-youth-club-website

./: README.md  app.py  database.db  database.py  main.py  model.py  pyproject.toml  requirements.txt  requriements.txt
static/css/: style.css
static/js/: custom.js
templates/: abo.html  add_news.html  add_workshop.html  admin.html  contact.html  donate.html  donatePointer.html  embasiders.html  index.html  login.html  news.html  sign_up.html  workshops.html
